[package]
name = "twitter_oracle"
version = "0.1.0"
authors = ["Shelven Zhou <favoring.zhou49@gmail.com>"]
edition = "2021"

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { path = "../vendor/openbrush-contracts", version = "~2.1.0", default-features = false }
pink-extension = { version = "0.1.8", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

fat_badges = { path = "../fat_badges", default-features = false, features = ["ink-as-dependency"] }
fat_utils = { path = "../utils", default-features = false }

serde = { version = "1.0.137", default-features = false, features = ["derive", "alloc"]}
serde-json-core = { version = "0.4.0", default-features = false }

[dev-dependencies]
environmental = { path = "../utils/environmental", default-features = false }

[lib]
name = "twitter_oracle"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "fat_badges/std",
    "fat_utils/std",
    "serde/std",
    "serde-json-core/std",
]
ink-as-dependency = []
mockable = [
    "fat_badges/mockable",
    "openbrush/mockable",
]
